Buttons and tiles clipping under navbar fix... AGAIN :3

--- a/src/css/CreateClaim.css
+++ b/src/css/CreateClaim.css
@@ -385,7 +385,7 @@ broken, so yipee!                                                               
     .dateInput {
         min-width: 95%;
     }
-    .createSubmit {
+    .buttons {
         margin-bottom: 6.5vh;
     }
 }
