--- a/src/css/ViewExpense.css
+++ b/src/css/ViewExpense.css
@@ -222,7 +222,7 @@ p {
     }
 
     #DraftDelete, #AppealClaim {
-        margin-bottom: 4svh;
+        margin-bottom: 6.5svh;
     }
 }
 
